# ISC License
#
# Copyright (c) 2026, Autonomous Vehicle Systems Lab, University of Colorado at Boulder
#
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

[workspace]
resolver = "2"
# Keep this list explicit so adding an in-tree Rust module requires a
# reviewable workspace registration change.
members = [
    "architecture/rust/bsk_build",
    "architecture/rust/bsk_macros",
    "architecture/rust/bsk_messages",
    "architecture/rust/bsk_utilities",
    "moduleTemplates/rustModuleTemplate",
]

[workspace.dependencies]
# Use one reviewed linear-algebra version across all in-tree Rust modules.
nalgebra = { version = "0.35.0", default-features = false, features = ["std"] }

[workspace.package]
rust-version = "1.89"

# Generated module entry points use catch_unwind to contain Rust panics before
# returning to C++. Out-of-tree module workspaces must use the same strategy;
# the #[bsk_build::module] expansion emits a compile error for panic="abort".
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
